--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                       class="link-soc"
                     >
                       <svg class="soc-icons" width="16" height="16">
-                        <use href="./images/icons.svg#"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
