--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="benefits-list-item">
               <div class="benefits-icons">
                 <svg class="icons-benefits" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-title">Strategy</h3>
@@ -75,7 +75,7 @@
             <li class="benefits-list-item">
               <div class="benefits-icons">
                 <svg class="icons-benefits" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-title">Punctuality</h3>
@@ -87,7 +87,7 @@
             <li class="benefits-list-item">
               <div class="benefits-icons">
                 <svg class="icons-benefits" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-title">Diligence</h3>
@@ -99,7 +99,7 @@
             <li class="benefits-list-item">
               <div class="benefits-icons">
                 <svg class="icons-benefits" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-title">Technologies</h3>
@@ -135,7 +135,7 @@
                       class="link-soc"
                     >
                       <svg class="soc-icons" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram-"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
